[package]
name = "spdk-rs-internal"
description = "SPDK library Rust internals"
version = "0.1.0"
edition = "2018"
build = "build.rs"
license = "MIT"
authors = [
  "Jeffry Molanus <jeffry.molanus@gmail.com>",
  "Jan Kryl <jan.kryl@mayadata.io>",
  "Dmitry Savitskiy <dmitry.savitsky@mayadata.io>",
]

[build-dependencies]
build-helpers = { path = "./build-helpers" }
bindgen = "0.68.1"
cc = "1.0.83"

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
nix = "0.27.1"
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snafu = "0.7.5"
tracing = "0.1.37"
uuid = { version = "1.4", features = ["v4"] }
